--- a/static/sass/Header/Header.sass
+++ b/static/sass/Header/Header.sass
@@ -55,6 +55,9 @@ $B: 0
 			align-items: center
 			justify-content: center
 			background-color: rgba($R,$G,$B,$opacity)
+			position: absolute
+			top: -400px
+			right: 0
 
 			.notification-text
 
@@ -127,7 +130,7 @@ $B: 0
 
 			.notification--wrapper2
 				flex: 0
-				min-width: 30%
+				width: 30%
 				animation: fadein 2s linear
 				justify-content: center
 				background-color: rgba($R,$G,$B,$opacity)
