--- a/static/sass/animations.sass
+++ b/static/sass/animations.sass
@@ -14,7 +14,7 @@
 
 @keyframes fadein 
 	from 
-		display: flex
+		top: 0
 		opacity: 0
 	25%
 		opacity: 1
@@ -22,4 +22,4 @@
 		opacity: 1
 	to   
 		opacity: 0
-		display: none
+		top: 0
